Fix project modal overflow-x bug on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -15,8 +15,10 @@ html {
   overflow-y: scroll;
 }
 body {
+  position: relative;
   background-color: var(--white) !important;
   transition: background-color 0.5s ease-in-out;
+  overflow-x: hidden;
 }
 .loading-circle {
   display: none;
